--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <title>hEr VOLUTION</title>
 	<meta name="Author" content=""/>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.7/semantic.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
+
+<section id="header">
+	<div class="container-fluid">
+		<div class="logo-data">
+			<h1>hEr VOLUTION</h1>
+			<h3>To raise awareness and value placed on STEM education for girls and young women in Canada.</h3>
+			<button id="head-btn" class="ui inverted huge teal button"><a href="#main">Come Join us!</a></button>
+		</div>
+	</div>
+</section>
 	
 <section id="nav">
 	<div class="ui secondary pointing menu">
@@ -25,19 +35,8 @@
 			Contact
 		</a>
 	</div>
-</section>	
+</section>		
 
-<section id="header">
-	<div class="container-fluid">
-		<div class="logo-data">
-			<h1>hEr VOLUTION</h1>
-			<h3>To raise awareness and value placed on STEM education for girls and young women in Canada.</h3>
-			<button id="head-btn" class="ui inverted huge teal button">Come Join us!</button>
-		</div>
-	</div>
-</section>
-	
-	
 <section id="main">
 	<div class="container">
 		<div class="title-area">
@@ -46,7 +45,7 @@
 			<p id="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 		</div>	
 	</div>
-</section>	
+</section>
 
 <script type="text/javascript" src="script.js"></script>
 </body>
